Add lighthouse ci

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/nicolasdelrosario/GroovyClone.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Nicolas Del Rosario",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/nicolasdelrosario/GroovyClone/issues"
