--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "groovyclone",
   "version": "1.0.0",
   "description": "This project is a replica of the Groovy website. The goal is to showcase skills in web development and user interface design.",
-  "main": "lighthouserc.js",
+  "main": "index.js",
   "scripts": {
     "build": "sass scss:staticDistDir/css"
   },
